# graphics

./: .gitignore  README.md
tiny_render/: CMakeLists.txt  README.md  geometry.cpp  geometry.h  main.cpp  main_1_line.cpp  main_2_triangle.cpp  main_3_depth_buffer.cpp  main_4_perspective_projection.cpp  model.cpp  model.h  tga_image.cpp  tga_image.h
